# The_Chess

./: CMakeLists.txt  README.md  main.cpp
inc/: Board.hpp  Figures.hpp  game.hpp  log.hpp
log/: log.cpp  main.cpp
practica_4_Umniy_Dom/: CMakeLists.txt  devices.txt  main.cpp
res/images/: chess-background-checkered-board-table-game-pattern_184560-265.jpg.avif
src/: Board.cpp  Figures.cpp  game.cpp  log.cpp
